--- a/config/darkmodeeverywhere-client.toml
+++ b/config/darkmodeeverywhere-client.toml
@@ -5,7 +5,7 @@ METHOD_SHADER_BLACKLIST = ["mezz.jei.common.render.FluidTankRenderer:drawTexture
 #Enabling this config will (every 5 seconds) dump which methods were used to render GUIs that the dark shader was applied to
 #The dump will consist of a list of class:method strings, e.g. 'net.minecraftforge.client.gui.overlay.ForgeGui:renderFood'
 #Use this feature to help find the render method strings of GUIs you would like to blacklist.
-METHOD_SHADER_DUMP = true
+METHOD_SHADER_DUMP = false
 
 ["Inventory Button"]
 	#Pixels away from the left of the GUI in the x axis
