--- a/config/veinmining-server.toml
+++ b/config/veinmining-server.toml
@@ -31,7 +31,7 @@ exhaustionMultiplier = 1.0
 #Allowed Values: CONFIG_LIST, ALL, ORES, ORES_LOGS, ORES_STONE, ORES_STONE_LOGS, NO_BLOCK_ENTITIES
 blocks = "CONFIG_LIST"
 #The blocks or block tags for vein mining if blocks is set to "CONFIG_LIST".
-blocksList = ["#c:ores", "#forge:ores", "#minecraft:logs"]
+blocksList = ["#c:ores", "#minecraft:leaves", "#forge:ores", "rubinated_nether:rubinated_blackstone", "minecraft:clay", "minecraft:gravel", "minecraft:nether_wart_block", "minecraft:warped_wart_block", "minecraft:amethyst_block"]
 #Determines if blocksList contains allowed blocks or denied blocks.
 #Allowed Values: ALLOW, DENY
 blocksListType = "ALLOW"
