Quest Changes by Gyldanword

--- a/config/quark-common.toml
+++ b/config/quark-common.toml
@@ -622,7 +622,7 @@
 		"Display Baked Enchantments In Tooltip" = true
 		"Italic Tooltip" = true
 		#Enchantments other than Gold's Fortune/Looting to bake into items. Format is "item+enchant@level", such as "minecraft:stick+sharpness@10".
-		"Baked Enchantments" = ["kubejs:bronze_hoe+veinmining:vein_mining@2","kubejs:bronze_shovel+veinmining:vein_mining@2","kubejs:bronze_pickaxe+veinmining:vein_mining@2","kubejs:silver_katana+smite@2", "kubejs:iron_scythe+bane_of_arthropods@2","wizards_reborn:innocent_wood_axe+silk_touch@1", "wizards_reborn:innocent_wood_pickaxe+silk_touch@1", "wizards_reborn:innocent_wood_shovel+silk_touch@1", "wizards_reborn:innocent_wood_hoe+silk_touch@1" "wizards_reborn:arcane_wood_axe+silk_touch@1", "wizards_reborn:arcane_wood_pickaxe+silk_touch@1", "wizards_reborn:arcane_wood_shovel+silk_touch@1", "wizards_reborn:arcane_wood_hoe+silk_touch@1"]
+		"Baked Enchantments" = ["kubejs:bronze_hoe+veinmining:vein_mining@2", "kubejs:bronze_shovel+veinmining:vein_mining@2", "kubejs:bronze_pickaxe+veinmining:vein_mining@2", "kubejs:silver_katana+smite@2", "kubejs:iron_scythe+bane_of_arthropods@2", "wizards_reborn:innocent_wood_pickaxe+silk_touch@1", "wizards_reborn:innocent_wood_shovel+silk_touch@1", "wizards_reborn:innocent_wood_axe+silk_touch@1", "wizards_reborn:innocent_wood_hoe+silk_touch@1", "wizards_reborn:arcane_wood_axe+silk_touch@1", "wizards_reborn:arcane_wood_pickaxe+silk_touch@1", "wizards_reborn:arcane_wood_shovel+silk_touch@1", "wizards_reborn:arcane_wood_hoe+silk_touch@1"]
 
 	[tweaks.grab_chickens]
 		"Needs No Helmet" = true
