more hearts for sol carrot

--- a/defaultconfigs/solcarrot-server.toml
+++ b/defaultconfigs/solcarrot-server.toml
@@ -7,7 +7,7 @@
 	#Range: 0 ~ 1000
 	heartsPerMilestone = 1
 	#A list of numbers of unique foods you need to eat to unlock each milestone, in ascending order. Naturally, adding more milestones lets you earn more hearts.
-	milestones = [5, 30, 55, 80, 105, 130, 155, 180, 205, 230]
+	milestones = [5, 30, 55, 80, 105, 130, 155, 180, 205, 230, 255, 280, 305, 330, 355, 380, 405, 430, 455, 480, 505, 530 ,555]
 
 [filtering]
 	#Foods in this list won't affect the player's health nor show up in the food book.
