--- a/defaultconfigs/sophisticatedbackpacks-server.toml
+++ b/defaultconfigs/sophisticatedbackpacks-server.toml
@@ -2,7 +2,7 @@
 #Server Settings
 [server]
 	#List of items that are not allowed to be put in backpacks - e.g. "minecraft:shulker_box"
-	disallowedItems = ["thermal:xp_crystal"]
+	disallowedItems = []
 	#Determines if container items (those that override canFitInsideContainerItems to false) are able to fit in backpacks
 	containerItemsDisallowed = false
 	#List of blocks that inventory interaction upgrades can't interact with - e.g. "minecraft:shulker_box"
