--- a/config/ars_nouveau/glyph_break.toml
+++ b/config/ars_nouveau/glyph_break.toml
@@ -16,11 +16,11 @@
 	glyph_tier = 1
 	#Limits the number of times a given augment may be applied to a given effect
 	#Example entry: "glyph_amplify=5"
-	augment_limits = ["ars_nouveau:glyph_fortune=4"]
+	augment_limits = ["ars_nouveau:glyph_fortune=4", "ars_nouveau:glyph_amplify=0"]
 	#How much an augment should cost when used on this effect or form. This overrides the default cost in the augment config.
 	#Example entry: "glyph_amplify=50"
 	augment_cost_overrides = []
 	#Prevents the given glyph from being used in the same spell as the given glyph
 	#Example entry: "glyph_burst"
-	invalid_combos = []
+	invalid_combos = ["ars_nouveau:glyph_amplify"]
 
