--- a/config/ars_creo-common.toml
+++ b/config/ars_creo-common.toml
@@ -4,4 +4,7 @@ wheelBaseSpeed = 32
 #Speed of the wheel with a gold block in front
 #Range: > 0
 wheelMaxSpeed = 32
+#Stress capacity of the wheel
+#Range: 0.0 ~ 1.7976931348623157E308
+wheelStressCapacity = 16.0
 
